install_data([
    'org.gnome.feedreader.gschema.xml',
    'org.gnome.feedreader.keybindings.gschema.xml',
    'org.gnome.feedreader.saved-state.gschema.xml',
    'org.gnome.feedreader.share.gschema.xml',
    'org.gnome.feedreader.tweaks.gschema.xml'
  ],
  install_dir: join_paths(SHARE_DIR, 'glib-2.0/schemas')
)
