vilistextum_inc = include_directories('.')
vilistextum_lib = static_library(
  'vilistextum',
  [
    'charset.c',
    'fileio.c',
    'html.c',
    'html_tag.c',
    'latin1.c',
    'lists.c',
    'microsoft.c',
    'text.h',
    'text.c',
    'unicode_entities.c',
    'util.c',
    'vilistextum.c'
  ],
  install: true,
  install_dir: [true, true, true]
)
